welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: not found: value baisserCrayon
  baisserCrayon()
  ^SnakeBuggle:8: error: not found: value x
  x= getMondeLargeur()
  ^SnakeBuggle:9: error: not found: value y
  y= getMondeHauteur()
  ^SnakeBuggle:10: error: not found: value y
  for (i <- 1 to y){
                 ^SnakeBuggle:12: error: not found: value x
      avance(x)
             ^SnakeBuggle:18: error: not found: value x
      avance(x)
             ^