welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisserCrayon()
  
}


def likeASnake(){
  x= getMondeLargeur()
  y= getMondeHauteur()
  for (i <- 1 to y){
    if (i==0%2){
      avance(x)
      droite()
      avance()
      droite()
    }
    else {
      avance(x)
      gauche()
      avance()
      gauche()
    }
  }
}
